# mfs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  dist-workspace.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: release-drafter.yml
agent-workflows/: index.html
api/: index.html
architecture/: index.html
auth-and-secrets/: index.html
backends/: index.html
caching/: index.html
cli/: Cargo.toml  README.md  build.rs  index.html  test_async_add.sh  test_cli_browse.sh  test_cli_e2e.sh
cli/src/: main.rs
comparison/: index.html
configuration/: index.html
connector-config-recipes/: index.html
connector-reference/: index.html
connectors/: index.html
content-model/: index.html
deployment/: index.html
deployments/: README.md
design/: 01-overview.md  02-architecture.md  03-cli-commands.md  04-connector-and-ingest.md  05-browse-and-read.md  06-search-and-retrieval.md  07-contributing-connector.md  08-agent-skill.md  09-connector-catalog.md  10-packaging-and-deployment.md
design-philosophy/: index.html
development/: index.html
docs/: agent-workflows.md  api.md  architecture.md  auth-and-secrets.md  backends.md  caching.md  cli.md  comparison.md  configuration.md  connector-config-recipes.md  connector-reference.md  (+30 more)
server-rs/: Cargo.toml  pyproject.toml
server-rs/src/: lib.rs
server/python/: .gitignore  README.md  pyproject.toml
server/python/src/mfs_server/: __init__.py  config.py
server/python/src/mfs_server/api/: app.py  models.py
server/python/src/mfs_server/common/: accel.py  converter.py  embedding.py  filter_ast.py  logging.py  retrieval.py  summary.py  timeparse.py  vlm.py
server/python/src/mfs_server/common/embeddings/: __init__.py  gemini.py  jina.py  local.py  mistral.py  ollama.py  onnx.py  openai.py  utils.py  voyage.py
server/python/src/mfs_server/common/llm/: __init__.py  anthropic.py  gemini.py  openai.py  openai_compatible.py
server/python/src/mfs_server/connectors/: base.py  registry.py
server/python/src/mfs_server/connectors/bigquery/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/discord/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/feishu/: __init__.py  auth_login.py  oauth.py  plugin.py
server/python/src/mfs_server/connectors/file/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/gdrive/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/github/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/gmail/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/hubspot/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/jira/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/linear/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/mongo/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/mysql/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/notion/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/postgres/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/s3/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/salesforce/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/slack/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/snowflake/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/web/: __init__.py  plugin.py
server/python/src/mfs_server/connectors/zendesk/: __init__.py  plugin.py
server/python/src/mfs_server/engine/: adapters.py  driver.py  engine.py  infra.py  ingest.py  job_watcher.py  manage.py  pipeline.py  pipeline_supervisor.py  policies.py  state.py  worker.py
server/python/src/mfs_server/engine/components/: __init__.py  artifact_cache.py  connector_factory.py  object_repository.py  upload.py
server/python/src/mfs_server/engine/components/reads/: __init__.py  cat_strategies.py  grep_strategies.py  read_service.py  text_views.py
server/python/src/mfs_server/engine/job_lane/: __init__.py  queue.py  tree.py  worker.py
server/python/src/mfs_server/engine/producers/: __init__.py  base.py  image.py  message_stream.py  record_collection.py  render.py  table_schema.py  text.py
server/python/src/mfs_server/engine/reduce/: __init__.py  tree.py  worker.py
server/python/src/mfs_server/processors/: text.py
server/python/src/mfs_server/server/: __main__.py  connector_schemas.py  connector_wizard.py  setup_wizard.py  wizard_ui.py
server/python/src/mfs_server/storage/: artifact_cache.py  file_state.py  ids.py  metadata.py  milvus.py  object_store.py  transformation_cache.py
server/python/src/mfs_server/storage/metadata/: __init__.py  base.py  postgres.py  sqlite.py
server/python/src/mfs_server/storage/transformation_cache/: __init__.py  base.py  postgres.py  sqlite.py
server/python/tests/: _fakes.py  phase10_connectors_unit.py  phase10_message_stream_smoke.py  phase10_mysql_smoke.py  phase10_postgres_smoke.py  phase11_density_smoke.py  phase11_filter_density_smoke.py  phase11_onnx_embedding_smoke.py  phase11_pg_backend_smoke.py  phase11_s3_objectstore_smoke.py  phase11_summary_smoke.py  phase11_upload_smoke.py  phase11_worker_smoke.py  phase12_connector_mgmt_smoke.py  phase12_github_meta_smoke.py  phase12_grep_pushdown_smoke.py  phase12_headcache_enum_smoke.py  phase12_locator_smoke.py  phase13_abnormal_smoke.py  phase13_bigquery_smoke.py  phase13_config_edges_smoke.py  phase13_cs_fullstack_smoke.py  phase13_dim_switch_smoke.py  phase13_discord_smoke.py  phase13_edges_smoke.py  phase13_estimate_update_smoke.py  phase13_fault_injection_smoke.py  phase13_feishu_docs_smoke.py  phase13_feishu_user_smoke.py  phase13_grep_regex_smoke.py  phase13_image_summary_smoke.py  phase13_incr_summary_smoke.py  phase13_lifecycle_smoke.py  phase13_mongo_deep_smoke.py  phase13_mongo_smoke.py  phase13_multi_connector_smoke.py  phase13_mysql_deep_smoke.py  phase13_namespace_smoke.py  phase13_notion_smoke.py  phase13_pg_concurrency_smoke.py  (+117 more)
(+637 files in other folders)
