[project]
name = "mfs"
version = "0.1.0"
description = "Semantic file search CLI powered by Milvus"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Cheney Zhang", email = "chen.zhang@zilliz.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "click>=8.1",
    "pymilvus>=2.5",
    "langchain-text-splitters>=0.2",
    "filelock>=3.13",
    "pyyaml>=6.0",
    "rich>=13.0",
    "openai>=1.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "milvus-lite>=2.5.1",
    "setuptools<81",
    "watchfiles>=1.1.1",
    "pymupdf4llm>=1.27.2.2",
    "python-docx>=1.1",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.7,<1.6.3",
]

[project.urls]
Homepage = "https://github.com/zilliztech/mfs"
Repository = "https://github.com/zilliztech/mfs"
Issues = "https://github.com/zilliztech/mfs/issues"

[project.optional-dependencies]
onnx = [
    "onnxruntime>=1.17,<1.24; python_version == '3.10'",
    "onnxruntime>=1.17; python_version >= '3.11'",
    "tokenizers>=0.15",
    "huggingface-hub>=0.23",
]
local = [
    "einops>=0.8.2",
    "sentence-transformers>=3.0",
]
google = ["google-genai>=1.0"]
voyage = ["voyageai>=0.3"]
jina = ["httpx>=0.27"]
mistral = ["mistralai>=1.0"]
ollama = ["ollama>=0.4"]
llm-anthropic = ["anthropic>=0.40"]
llm-google = ["google-genai>=1.0"]
llm-ollama = ["ollama>=0.4"]
llm-mistral = ["mistralai>=1.0"]
all = [
    "mfs[onnx,local,google,voyage,jina,mistral,ollama,llm-anthropic,llm-google,llm-ollama,llm-mistral]",
]

[project.scripts]
mfs = "mfs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mfs"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    { include-group = "docs" },
]
