[package]
name = "mfs"
version = "0.4.0"
edition = "2021"
description = "MFS CLI — shell-native client for Multi-source File-like Search"

[[bin]]
name = "mfs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = 2
