[package]
name = "mfs-cli"
version = "0.4.2"
edition = "2021"
authors = ["Cheney Zhang <chen.zhang@zilliz.com>"]
description = "MFS CLI — shell-native client for Multi-source File-like Search"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/zilliztech/mfs"
homepage = "https://github.com/zilliztech/mfs"
keywords = ["search", "semantic", "milvus", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

# The binary is `mfs`, the crate is `mfs-cli`. `cargo install mfs-cli` puts
# the `mfs` binary on the user's PATH; that's the documented entry point.
[[bin]]
name = "mfs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha1 = "0.10"
tar = "0.4"
flate2 = "1"
ignore = "0.4"

[profile.release]
opt-level = 2

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
