[project]
name = "mfs-server"
version = "0.4.0"
description = "MFS server — Multi-source File-like Search (heavy side: connectors, ingest, retrieval, storage)"
requires-python = ">=3.10"
dependencies = [
    "pymilvus>=2.5",
    "openai>=1.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "tomli>=2.0; python_version < '3.11'",
    "tiktoken>=0.7",
    "python-multipart>=0.0.9",
    "chonkie>=0.4",
    "markitdown[all]>=0.0.1",
    "milvus-lite>=3.0",
    "pathspec>=1.1.1",
]

[project.optional-dependencies]
pg = ["asyncpg>=0.29"]
web = ["aiohttp>=3.9", "beautifulsoup4>=4.12"]
github = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
mfs-server = "mfs_server.server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mfs_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
]
