[project]
name = "mfs-server"
version = "0.4.0-beta.1"
description = "MFS server — Multi-source File-like Search (heavy side: connectors, ingest, retrieval, storage)"
readme = "../../README.md"
license = "Apache-2.0"
authors = [
    { name = "Cheney Zhang", email = "chen.zhang@zilliz.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymilvus>=2.5",
    "openai>=1.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "tomli>=2.0; python_version < '3.11'",
    "tiktoken>=0.7",
    "python-multipart>=0.0.9",
    "chonkie>=0.4",
    "markitdown[all]>=0.0.1",
    "milvus-lite>=3.0",
    "pathspec>=1.1.1",
    "aiomysql>=0.3.2",
    "pymongo>=4.13",
    # Default embedding backend is local ONNX (BGE) — no API key required.
    # See config.py EmbeddingConfig defaults. Provider can be switched to
    # "openai" / etc via the setup wizard.
    "onnxruntime>=1.17",
    "huggingface-hub>=0.20",
    "tokenizers>=0.15",
    "numpy>=1.24",
]

[project.optional-dependencies]
pg = ["asyncpg>=0.29"]
web = ["aiohttp>=3.9", "beautifulsoup4>=4.12"]
github = ["httpx>=0.27"]
# SaaS / message / object-store connectors (each pulls its official SDK)
slack = ["slack_sdk>=3.27"]
notion = ["notion-client>=2.2"]
jira = ["atlassian-python-api>=3.41"]
salesforce = ["simple-salesforce>=1.12"]
hubspot = ["hubspot-api-client>=11.0"]
bigquery = ["google-cloud-bigquery>=3.20"]
snowflake = ["snowflake-connector-python>=3.10"]
s3 = ["aioboto3>=13.0"]
google = ["google-api-python-client>=2.120", "google-auth>=2.29"]   # gdrive + gmail
feishu = ["lark-oapi>=1.2"]
# discord/linear/zendesk use httpx only (already a core dep)
all-connectors = [
    "asyncpg>=0.29", "aiohttp>=3.9", "beautifulsoup4>=4.12",
    "slack_sdk>=3.27", "notion-client>=2.2", "atlassian-python-api>=3.41",
    "simple-salesforce>=1.12", "hubspot-api-client>=11.0",
    "google-cloud-bigquery>=3.20", "snowflake-connector-python>=3.10",
    "aioboto3>=13.0", "google-api-python-client>=2.120", "google-auth>=2.29",
    "lark-oapi>=1.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
# Kept as an alias for back-compat; the ONNX embedding stack is now a core
# dep so this extra is effectively a no-op. Existing
# `pip install mfs-server[embedding-onnx]` commands still work.
embedding-onnx = []

[project.scripts]
mfs-server = "mfs_server.server.__main__:main"

[project.urls]
Homepage = "https://github.com/zilliztech/mfs"
Repository = "https://github.com/zilliztech/mfs"
Issues = "https://github.com/zilliztech/mfs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mfs_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Native hot-path acceleration lives in server-rs/ (PyO3, built with maturin:
# `cd server-rs && maturin develop --release`). It is OPTIONAL at runtime —
# mfs_server.common.accel falls back to pure Python when the wheel isn't installed.
# A release ships it as a per-platform wheel bundled with mfs-server.

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "maturin>=1.13.3",
]
